--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \usepackage{titletoc}
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,positioning}
-\renewcommand{\lstlistingname}{Figure}% Listing -> Figure
+\renewcommand{\lstlistingname}{Figura}% Listing -> Figure
 
  % Add new own commands
 \newcommand{\cacho}{\textcolor{red}}
