--- a/experimental.tex
+++ b/experimental.tex
@@ -390,6 +390,13 @@ Es esperable que al generar objetos más diversos y más grandes, los objetos pr
 La calidad de los objetos generados se evalúa más adelante en la Sección \ref{sec:parametrizedTesting}, 
 donde los utilizamos como entradas de tests parametrizados sobre las estructuras de datos. 
 
+\subsubsection{Testing parametrizado}
+\label{sec:experiments-builders-parameterized}
+
+\pp{Cacho: Agregar tablas de Randoop, R-Serialize-API, R-Serialize-MGO.}
+
+\pp{Pablo: Describir estas técnicas en configuración experimental.}
+
 \subsubsection{Verificación acotada usando JPF}
 \label{sec:experiments-jpf-driver}
 
