--- a/resumen.tex
+++ b/resumen.tex
@@ -49,8 +49,9 @@ BEAPI emplea solo métodos generadores de objetos durante la generación
 
 Se evaluaron experimentalmente las técnicas propuestas, en clases que manipulan 
 objetos complejos. 
-Los resultados muestran que los enfoques de identificación de métodos generadores se ejecutan en tiempos razonables, y encuentran métodos generadores de objetos
-suficientes y (casi) minimales (incluyen algunos métodos
+Los resultados muestran que los enfoques de identificación de métodos
+generadores se ejecutan en tiempos razonables, y encuentran métodos generadores
+de objetos con buena precisión (incluyen pocos métodos
 irrelevantes en pocos casos). Además, se muestran resultados preliminares que
 indican que los métodos generadores de objetos son útiles para mejorar 
 la generación de objetos usando técnicas de generación aleatoria y
