improved tables opti and eficienciaBeapi

--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -302,16 +302,16 @@ ejecución}
 &	13	&	689.06	&	308.06	&	-	&	-	\\
 &	14	&	-	&	-	&	-	&	-	\\
   \midrule
-  SortedList
-&	3	&	0.01	&	0.01	&	0.24	&	0.94	\\
-&	4	&	0.02	&	0.03	&	74.45	&	-	\\
-&	5	&	0.05	&	0.05	&	-	&	-	\\
-&	6	&	0.11	&	0.13	&	-	&	-	\\
-&	7	&	0.23	&	0.27	&	-	&	-	\\
-&	8	&	0.65	&	0.68	&	-	&	-	\\
-&	9	&	02.07	&	2.24	&	-	&	-	\\
-&	10	&	8.14	&	09.04	&	-	&	-	\\
-  \bottomrule
+%   SortedList
+% &	3	&	0.01	&	0.01	&	0.24	&	0.94	\\
+% &	4	&	0.02	&	0.03	&	74.45	&	-	\\
+% &	5	&	0.05	&	0.05	&	-	&	-	\\
+% &	6	&	0.11	&	0.13	&	-	&	-	\\
+% &	7	&	0.23	&	0.27	&	-	&	-	\\
+% &	8	&	0.65	&	0.68	&	-	&	-	\\
+% &	9	&	02.07	&	2.24	&	-	&	-	\\
+% &	10	&	8.14	&	09.04	&	-	&	-	\\
+%   \bottomrule
 \end{tabular}
 \end{table}
 
