--- a/tables/tableEficienciaBEAPI.tex
+++ b/tables/tableEficienciaBEAPI.tex
@@ -14,17 +14,14 @@
 & & 8 & 50.59 & TO & 19173961 & & 215616158 & \\
 & & 9 & \textbf{1333.88}  & TO & 435848050 & & 5325611829 & \\
 \cmidrule{2-9}
- &{\textbf{FibHeap}}
+ &{\textbf{FHeap}}
 & 6 & 1.26 &  5.95 &  573223  & 54159 & 1641562 & 379125  \\
 & & 7 & 32.87 & \textbf{115.44} & 17858246 & 898394 & 54268866 & 7187167  \\
 & & 8 & \textbf{1415.77}  & TO & 654214491 & & 2105008180 &   \\
 \cmidrule{2-9}
- &BinHeap
-
-                       
+ &BinHeap                       
 &   7   &   0.26     &  25.32      & 107416 &107416 & 261788 &859337 \\  
 &    &   8   &   0.85     &  \textbf{163.39}     & 603744 &603744 & 1323194&5433706\\
-
 & & 9 & 7.65  & TO &  8746120 & & 11778107  & \\
 & & 10  & 107.30  & TO & 117157172 &  & 150727471  &    \\
 & & 11  & \textbf{2558.32}  & TO & 2835325296 & & 2985116257 &    \\
@@ -85,22 +82,23 @@
   & 8 & 1.36  & 2396745 & 2739181 & 297.41  & 2396745 & 19173969  \\
 & & 9 & 30.47 & 48427561  & 54481060  & TO  &   &   \\
 & & 10  & \textbf{681.89} & \textbf{1111111111} & 1234567966  & TO  &   &   \\
-%  &DLList 
-% %     & 3 & 0.101 & 13  & 42  & 0.01  & 13  & 43  \\
-% % & & 4 & 0.105 & 85  & 152 & 0.05  & 85  & 345 \\
-% % & & 5 & 0.113 & 781 & 1035  & 0.17  & 781 & 3911  \\
-% % & & 6 & 0.129 & 9331  & 11280 & 0.83  & 9331  & 55993 \\
-%   % & 7 & 0.254 & 137257  & 160244  & 12.14 & 137257  & 960807  \\
-%   & 8 & 1.734 & 2396745 & 2739280 & 269.47  & 2396745 & 19173969  \\
-% & & 9 & 32.748  & 48427561  & 54481185  & TO  &   &   \\
-% & & 10  & 802.047 & 1111111111  & 1234568120  & TO  &   &   \\
-% \cmidrule{2-9}
-%  &NCL 
-%     % & 3 & 0.12  & 102 & 4344  & 0.06  & 18  & 114 \\
-%   % & 4 & 0.16  & 1252  & 64269 & 0.26  & 112 & 904 \\
-%   & 5 & 0.63  & 18555 & 1205794 & 0.84  & 975 & 9760  \\
-% & & 6 & 7.12  & 324726  & 26462391  & 4.80  & 11196 & 134364  \\
-% & & 7 & 182.25  & 6565468 & 657989516 & 58.75 & 160132  & 2241862 \\
+\cmidrule{2-9}
+ &DLList 
+%     & 3 & 0.101 & 13  & 42  & 0.01  & 13  & 43  \\
+% & & 4 & 0.105 & 85  & 152 & 0.05  & 85  & 345 \\
+% & & 5 & 0.113 & 781 & 1035  & 0.17  & 781 & 3911  \\
+% & & 6 & 0.129 & 9331  & 11280 & 0.83  & 9331  & 55993 \\
+  % & 7 & 0.254 & 137257  & 160244  & 12.14 & 137257  & 960807  \\
+  & 8 & 1.734 & 2396745 & 2739280 & 269.47  & 2396745 & 19173969  \\
+& & 9 & 32.748  & 48427561  & 54481185  & TO  &   &   \\
+& & 10  & 802.047 & 1111111111  & 1234568120  & TO  &   &   \\
+\cmidrule{2-9}
+ &NCL 
+    % & 3 & 0.12  & 102 & 4344  & 0.06  & 18  & 114 \\
+  % & 4 & 0.16  & 1252  & 64269 & 0.26  & 112 & 904 \\
+  & 5 & 0.63  & 18555 & 1205794 & 0.84  & 975 & 9760  \\
+& & 6 & 7.12  & 324726  & 26462391  & 4.80  & 11196 & 134364  \\
+& & 7 & 182.25  & 6565468 & 657989516 & 58.75 & 160132  & 2241862 \\
 \bottomrule
 
 \end{tabular}%
