--- a/tables/tableEficienciaBEAPI1.tex
+++ b/tables/tableEficienciaBEAPI1.tex
@@ -72,26 +72,26 @@
 &	&	7	&	17.47	& 13.06 & 	107416	& 107416 &	64592184 & 859337	\\
 &	&	8	&	\textbf{448.48}	& \textbf{96.94} &	603744	& 603744 &	1483194820	&	5433706	\\
 \midrule
-&	BST	
+&	BinTree	
     &   11  &   12.184  & 204.83 & 974427 & 974427 & 62669069 & 10718710\\
 &	&	12	&	65.305	& \textbf{1235.67} &	4302645	& 4302645 &	308229505 &	51631754	\\
 &	&	13	&	326.524	& TO & 19181100	& &	1514612776	&		\\
 &	&	14	&	\textbf{1751.4}	& TO & 86211885	& &	7438853941  &		\\
 \cmidrule{2-9}															
-&	DLL	
+&	DLList	
 	&	7	&	0.614 & 18.09	&	137257	& 137257 &	2326622	&	960807	\\
 &	&	8	&	9.824 &	\textbf{257.42} & 2396745	& 2396745 &	45449534 &	19173969	\\
 &	&	9	&	\textbf{245.787}	& TO &	48427561 & 	&	1015587001	&		\\
-% \cmidrule{2-9}															
-% &	DisjSet	
-% % 	&	3	&	0.079	&	4	&	18	&	0.02	&	4	&	45	\\
-% % &	&	4	&	0.08	&	20	&	108	&	0.06	&	20	&	336	\\
-% % &	&	5	&	0.085	&	145	&	915	&	0.30	&	145	&	3650	\\
-% % &	&	6	&	0.099	&	1441	&	10428	&	1.94	&	1441	&	51912	\\
-% 	% &	7	&	0.205	&	18248	&	149422	&	28.94	&	18248	&	894201	\\
-% 	&	8	&	0.812	&	280392	&	2567512	&	TO	&		&		\\
-% &	&	9	&	10.568	&	5063361	&	51316011	&	TO	&		&		\\
-% &	&	10	&	248.014	&	105063361	&	1168128900	&	TO	&		&		\\
+\cmidrule{2-9}															
+&	DisjSet	
+% 	&	3	&	0.079	&	4	&	18	&	0.02	&	4	&	45	\\
+% &	&	4	&	0.08	&	20	&	108	&	0.06	&	20	&	336	\\
+% &	&	5	&	0.085	&	145	&	915	&	0.30	&	145	&	3650	\\
+% &	&	6	&	0.099	&	1441	&	10428	&	1.94	&	1441	&	51912	\\
+	&	7	&	0.205	&	18248	&	149422	&	28.94	&	18248	&	894201	\\
+	&	8	&	0.812	&	280392	&	2567512	&	TO	&		&		\\
+&	&	9	&	10.568	&	5063361	&	51316011	&	TO	&		&		\\
+&	&	10	&	248.014	&	105063361	&	1168128900	&	TO	&		&		\\
 \cmidrule{2-9}															
 &	{\textbf{RBT}}
     &   7   &  10.76 &	0.78	& 911   &   561     & 44832139  & 7866\\
@@ -102,7 +102,7 @@
 &	&	12	&	TO  &	\textbf{84.51} 	&		&	112237	&		&	2693710	\\
 \cmidrule{2-9}															
 \hightlight
-&	DisjSetFast
+&	DisjSet
     &   6   &   0.198	& 0.89	& 52165     & 544 & 117456      & 22890 \\
 \hightlight
 &	&	7	&	1.209	& \textbf{8.26} &  1545157	& 4397 &	3398383	&	246288	\\
@@ -113,7 +113,7 @@
 
 &	&	9	&	\textbf{1402.376} & TO	&	2201735557	& &	4715569321	&		\\
 \cmidrule{2-9}															
-&	StackList
+&	StackLi
 
     &   6   &   0.128	& 4.35	& 55987 & 55987 & 56008 & 335930 \\
 &	&	7	&	0.517	& \textbf{83.06} &	960800	& 960800 &	960828	&	6725609	\\
